Opened 16 years ago
Closed 15 years ago
#4253 closed bug (fixed)
[Interface kit] listview drawing problems in Vision
Reported by: | diver | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Start Vision.
Click Network Setup...->Add...->type "Vision3"->Done.
Select Vision3 and click yellow up arrow twice.
Tested in hrev32436 in VirtualBox 3.0.4.
Change History (3)
comment:1 by , 15 years ago
comment:2 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
Note:
See TracTickets
for help on using tickets.
Still here in hrev35570.